# tex2html

./: .gitignore  README.md  pyproject.toml
.github/workflows/: conversion-container-pytest.yml  deploy-reverse-proxy-on-arxiv-browse-event.yml
FeedbackFunction/: main.py
SubmitReverseProxy/: Dockerfile  entry_point.py
SubmitReverseProxy/ReverseProxy/: authorize.py  config.py  db_queries.py  factory.py  files.py  routes.py  scaffold_response.py  util.py
assets/css/: ar5iv.0.8.5.css
cicd/: cloudbuild-develop-pr.yaml  cloudbuild-master-pr.yaml
conversion-container/: .gitignore  Dockerfile  pyproject.toml
conversion-container/conversion/: config.py  exceptions.py  factory.py  locking.py
conversion-container/dockerfiles/: Dockerfile.ar5ivist_base  Dockerfile.main_dev  Dockerfile.main_prod
conversion-container/tests/: conftest.py  test_call_latexml.py  test_log_parser.py  test_submission_payload.py  test_write_failure.py
convert-scheduler/: config.py  main.py  times.csv  workers_schedules.json
scripts/: setup.ps1
src/tex2html/: embedding.py  latexml.py  log_handling.py  main.py  postprocess.py  preprocess_tex.py
src/tex2mdx/: latexml.py  main.py  preprocess.py
test/: combined.tex  main.tex  test.tex  trfsigns.ltxml  trfsigns.sty.ltxml
test/chapters/: 01_einleitung.tex  02_signalabtastung_und_rekonstruktion.tex  03_texorpdfstring_zeitdiskrete_signale.tex  04_zeitdiskrete_systeme_im_zeitbereich.tex  05_z_transformation_von_signalen.tex  06_zeitdiskrete_systeme_im_z_bereich.tex  07_spektrum_von_signalfolgen.tex  08_label_sec_section.tex  (+6 more)
(+96 files in other folders)
