[project]
name = "tex2html"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "typer>=0.25.1",
]

[project.scripts]
tex2html = "tex2html.main:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-data = { tex2html = ["assets/**/*"] }

[tool.uv]
package = true
